add basic game flow via react components

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to the Snippet Game!</h1>
+<h1>hello!</h1>
 <nav class="navbar navbar-dark bg-dark fixed-left">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Offcanvas dark navbar</a>
