--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,49 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+<nav class="navbar navbar-dark bg-dark fixed-top" >
+  <div class="container-fluid">
+    <%= link_to 'SnipSlip', root_path, data: { turbolinks: false }, class: 'navbar-brand' %>
 
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <%= link_to 'Get Snippet', snippets_path, class: 'nav-link' %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'New Snippet', new_snippet_path, class: 'nav-link' %>
-      </li>
-    </ul>
+    <%# score %>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <%# off canvas  %>
+    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <%= link_to 'Add Snippet', new_snippet_path, data: { turbolinks: false }, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Invite a Friend', '#', class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Profile', '#', class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Settings', '#', class: 'nav-link' %>
+          </li>
+          <!-- dropdown -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              More Options
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark">
+              <li><%= link_to 'Action', '#', class: 'dropdown-item' %></li>
+              <li><%= link_to 'Another action', '#', class: 'dropdown-item' %></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><%= link_to 'Something else here', '#', class: 'dropdown-item' %></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </nav>
