--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,15 @@
   </head>
 
   <body>
-    <%= render "layouts/header" %>
-    <%= yield %>
-  </body>
 
+    <%= render "layouts/header" %>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    
+    <div class="container">
+      <%= yield %>
+    </div>
+
+  </body>
 </html>
