--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,20 @@
-<h1>hello!</h1>
+<div id="root"></div>
+<div class="d-flex justify-content-center">
+  <div class="container mt-5 d-flex flex-column align-items-center">
+    <div>
+      <h2 class="align-self-start">Rules</h2>
+      <div>
+        <ul class="list-unstyled">
+          <li>Press Play</li>
+          <li>Select a snippet</li>
+          <li>Sneak it into regular conversation without anyone noticing</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<%# <h1>hello!</h1>
 <nav class="navbar navbar-dark bg-dark fixed-left">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Offcanvas dark navbar</a>
@@ -39,4 +55,4 @@
       </div>
     </div>
   </div>
-</nav>
+</nav> %>
