Add user-specific language filtering for snippets, sharing link, profile view and edit page

--- a/app/javascript/stylesheets/_button_styles.scss
+++ b/app/javascript/stylesheets/_button_styles.scss
@@ -4,9 +4,9 @@
 }
 
 .result-button {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
+  width: 180px;
+  height: 40px;
+  border-radius: 40%;
   font-size: 24px;
   display: flex;
   align-items: center;
@@ -32,4 +32,45 @@
     background-color: #ab5e66;
     color: white;
   }
+}
+
+
+.button-fancy {
+  --b: 3px;   /* border thickness */
+  --s: .45em; /* size of the corner */
+  --color: #373B44;
+
+  padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+  color: var(--color);
+  --_p: var(--s);
+  background:
+    conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--color) 0)
+    var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
+  transition: .2s linear, color 0s, background-color 0s;
+  outline: var(--b) solid #0000;
+  outline-offset: .6em;
+  font-size: 16px;
+
+  border: 0;
+
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+
+  // height: auto;
+  aspect-ratio: 4 / 1;
+  margin: 3%;
+  margin-left: 6%;
+}
+
+.button-fancy:hover,
+.button-fancy:focus-visible{
+  --_p: 0px;
+  outline-color: var(--color);
+  outline-offset: .05em;
+}
+
+.button-fancy:active {
+  background: var(--color);
+  color: #fff;
 }
