--- a/app/views/snippets/new.html.erb
+++ b/app/views/snippets/new.html.erb
@@ -1,10 +1,11 @@
 
 <div class="container" style="width: 50vh">
-  <h3 class="mb-4">Add a New Snippet</h3>
+  <h3 class="mb-4 mt-4">Add a New Snippet</h3>
   <%= simple_form_for @lyric_snippet, url: snippets_path do |f| %>
     <%= f.input :snippet, as: :text, input_html: { rows: 2 } %>
     <%= f.input :artist %>
     <%= f.input :song %>
+    <%= f.input :language, collection: LyricSnippet.languages, selected: "English" %>
     <div id="difficulty-slider"></div>
     <%= f.button :submit, 'Create Snippet', class: 'btn btn-primary mt-4' %>
   <% end %>
