--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark fixed-top" >
+<nav class="navbar navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
     <%= link_to 'SnipSlip', root_path, data: { turbolinks: false }, class: 'navbar-brand' %>
 
@@ -9,25 +9,27 @@
     </button>
 
     <%# off canvas  %>
-    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
+    <div class="offcanvas offcanvas-end text-bg-dark" style="width: 220px;" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <%= link_to 'Add Snippet', new_snippet_path, data: { turbolinks: false }, class: 'nav-link' %>
+            <%= link_to 'Add Snippet', new_snippet_path, data: { turbolinks: false }, class: 'nav-link' if user_signed_in? %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Invite a Friend', '#', class: 'nav-link' %>
+            <div id="invite-friend"></div>
           </li>
           <li class="nav-item">
-            <%= link_to 'Profile', '#', class: 'nav-link' %>
+            <%= link_to 'Profile', user_profile_path, data: { turbolinks: false }, class: 'nav-link' if user_signed_in? %>
           </li>
-          <li class="nav-item">
-            <%= link_to 'Settings', '#', class: 'nav-link' %>
+          <li>
+            <% if user_signed_in? %>
+              <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
+            <% else %>
+              <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+              <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+            <% end %>
           </li>
+
           <!-- dropdown -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
