--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,18 @@
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    
+
+
     <div class="container">
       <%= yield %>
     </div>
 
+    <div class="flash-container">
+      <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key == 'notice' ? 'success' : 'danger' %>">
+          <%= value %>
+        </div>
+      <% end %>
+    </div>
   </body>
 </html>
