--- a/app/views/snippets/thank_you.html.erb
+++ b/app/views/snippets/thank_you.html.erb
@@ -1,3 +1,3 @@
 <div id="root"></div>
 
-<h1>Thanks current_user.username😍</h1>
+<h1 class="mt-4" style="text-align: center;">Thanks <%= current_user.name.capitalize %>😍</h1>
