--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,13 +1,13 @@
 <div id="root"></div>
 <div class="d-flex justify-content-center">
   <div class="container mt-5 d-flex flex-column align-items-center">
-    <div>
-      <h2 class="align-self-start">Rules</h2>
+    <div class="mt-4">
+      <%# <h2 class="align-self-start">Rules</h2> %>
       <div>
         <ul class="list-unstyled">
           <li>Press Play</li>
           <li>Select a snippet</li>
-          <li>Sneak it into regular conversation without anyone noticing</li>
+          <li>Slip it into regular conversation without anyone noticing</li>
         </ul>
       </div>
     </div>
