Add models: GameSession, Round, GameSessionParticipant; success/failure buttons integrated with scoring system

--- a/app/views/snippets/index.html.erb
+++ b/app/views/snippets/index.html.erb
@@ -1,7 +1,5 @@
-<div id="root">
-  <% if @game_session.present? %>
-    <%= react_component("SnippetsGame", { game_session_id: @game_session.id }) %>
-  <% else %>
-    <%= react_component("SnippetsGame") %>
-  <% end %>
-</div>
+
+<div id="snippets-game" data-game-session-id="<%= @game_session&.id %>"></div>
+
+
+<%# snippetgame or root id? %>
