WIP: Add dynamic game data handling and progress display. - Implemented state management for game session and round history in SnippetsGame component. - GameProgressCard now updates on round submission (still in progress). - Began work on handling gameover flow and proper display after session ends.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div id="user-profile"
-  data-user="<%= current_user.to_json(only: [:name, :email, :language]) %>"
+  data-user="<%= current_user.to_json(only: [:id, :name, :email, :language]) %>"
   data-languages="<%= LyricSnippet.languages.to_json %>">
 </div>
 
