Add GameOver flow, GameProgressCard data updates correctly

--- a/app/views/snippets/index.html.erb
+++ b/app/views/snippets/index.html.erb
@@ -1,5 +1,6 @@
 
-<div id="snippets-game" data-game-session-id="<%= @game_session&.id %>"></div>
+<%# <div id="snippets-game" data-game-session-id="<%= @game_session&.id %>
+<div id="root" data-game-session-id="<%= @game_session&.id %>"></div>
 
 
 <%# snippetgame or root id? %>
